# rawprox

./: .gitignore  Cargo.toml  FOUNDATION.md  Program.cs  README.md  SPECIFICATION.md  rawprox.csproj
code/: Program.cs  RawProx.csproj  rawprox.csproj
doc/: DOUBLE_BUFFERING.md  LESSONS_LEARNED.md
prompts/: 00) note to human.md  01) foundation.md  02) doc-consistency.md  03) test-coverage.md  04) startup.md  05) test-fix-loop.md  06) bug-report.md  CLAUDE_global.md  bug-report.md  code-consistency.md  divide-and-conquer.md  doc-consistency.md  reorg-project.md  startup.md  test-coverage.md  test-fix-loop.md  unit-testing.md
readme/: COMMAND-LINE_USAGE.md  HELP.md  LOG_FORMAT.md  MCP_SERVER.md  PERFORMANCE.md
reports/: 2025-11-02-13-11-32_missing_build_script.md  2025-11-02-13-33-37_untested_req.md  2025-11-02-13-35-12_untested_req.md  2025-11-02-13-36-44_untested_req.md  2025-11-02-13-38-22_untested_req.md  2025-11-02-13-40-20_untested_req.md  2025-11-02-13-44-52_untested_req.md  2025-11-02-13-46-19_untested_req.md  2025-11-02-13-47-28_untested_req.md  2025-11-02-13-48-44_untested_req.md  2025-11-02-13-50-12_untested_req.md  2025-11-02-13-51-30_untested_req.md  2025-11-02-13-53-36_untested_req.md  2025-11-02-13-54-43_untested_req.md  2025-11-02-13-56-07_untested_req.md  2025-11-02-14-07-43_untested_req.md  2025-11-02-14-11-29_untested_req.md  2025-11-02-14-12-27_untested_req.md  2025-11-02-14-13-23_untested_req.md  2025-11-02-14-14-41_untested_req.md  2025-11-02-14-20-46_order_tests.md  2025-11-02-14-23-42_build_artifacts.md  2025-11-02-14-24-00_failing_test.md  (+33 more)
(+99 files in other folders)
