[package]
name = "rawprox"
version = "0.1.0"
edition = "2021"
authors = ["RawProx Development"]
description = "A simple HTTP proxy server"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary size