[package]
name = "rawprox"
version = "2.0.0"
edition = "2021"
authors = ["RawProx Contributors"]
description = "A transparent TCP proxy that logs every byte of network traffic as NDJSON"
license = "MIT"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
