[package]
name = "rawprox"
version = "2.0.0"
edition = "2021"
authors = ["RawProx Contributors"]
description = "Raw Traffic Logging Proxy - Transparent TCP proxy with NDJSON logging"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
